--- a/source/_posts/一群小白程序员扒了一个俄罗斯的开源框架.md
+++ b/source/_posts/一群小白程序员扒了一个俄罗斯的开源框架.md
@@ -7,6 +7,8 @@ date: 2016-03-06 12:06:00
 ---
 60多年前，一群小白程序员扒了一个俄罗斯的开源框架，写了几行漏洞百出的代码，产品上线运营了，30年后新的CTO实在看不下去了，重构了部分代码，但框架依旧是旧的，又过了30年新代码和就框架严重不兼容，产品濒临崩溃，用户流失严重，这时我们该
 
+<!-- more -->
+
 1继续修bug打补丁
 
 2换个框架重构代码
