--- a/source/_posts/创业公司高性能服务端优化之路.md
+++ b/source/_posts/创业公司高性能服务端优化之路.md
@@ -7,6 +7,8 @@ date: 2016-01-22 15:47:00
 ---
 由于业务规模增长极大，在1年左右的时间从零增长到每天近百万单，给后端带来极大的访问压力。压力主要分为两类：读压力、写压力。读压力来源于配送员在APP中抢单，高频刷新查询周围的订单，每天访问量几亿次，高峰期QPS高达数千次/秒。写压力来源于商家发单、接单、取货、完成等操作。业务读的压力远大于写压力，读请求量约是写请求量的30倍以上。
 
+<!-- more -->
+
 极速增长的业务，对技术的要求越来越高，我们必须在架构上做好充分的准备，才能迎接业务的挑战。接下来，我们一起看看的后台架构是如何演化的。
 
 最初的技术选型
@@ -95,8 +97,8 @@ ID生成器是整个水平分库的核心，它决定了如何拆分数据，以
 
 创业是与时间赛跑的过程，前期为了快速满足业务需求，我们采用简单高效的方案，如使用云服务、应用服务直接访问单点DB；后期随着系统压力增大，性能和稳定性逐渐纳入考虑范围，而DB最容易出现性能瓶颈，我们采用读写分离、垂直分库、水平分库等方案。面对高性能和高稳定性，架构升级需要尽可能超前完成，否则，系统随时可能出现系统响应变慢甚至宕机的情况。
 
-     
-     
+
+
 
 如果觉得还不错，赏点酒钱！
 ![](/images/aex068188cqwy9xbxa3oc07.png)
