--- a/source/_posts/创业反思.md
+++ b/source/_posts/创业反思.md
@@ -5,22 +5,21 @@ categories:
   - 闲谈
 date: 2016-02-09 21:35:00
 ---
+
 往往夜深人静的时候，容易胡思乱想。但今天不知为何，躺在床上不停的回忆创业往事，感觉有点过头了。可能与今天的心情，或者与看到的事情有关。
+
+<!-- more -->
 
 我当时进入公司作为技术合伙人的时候，公司正进行新的产品研发。不过之前公司已经开发了一款产品，所以团队开发能力还是有的（虽然人员变换频繁，不过还是很理解的，毕竟是创业公司）。先不说新产品市场，前景如何如何，此时公司内部问题还是有很多的。
 
-第一：选错人；我进入公司时候，原先主力iOS没干了（其实之前也是外包，做完就撤），剩下的是CEO招进来的，招了几个看上去还不错的iOS程序员。由于CEO也不是技术出身，所以说招进来的靠不靠谱也不是很清楚。按照以往我的习惯，我要了解一个人，我就网络搜索，爬虫等。还是挖到了一些有用的信息，iOS开发竟是培训机构出来的。之前谎称是有2年工作经验的。这块我找CEO聊了聊，但是人不好找，新产品开发时间紧，迫于无赖。暂时先留着，开发新产品。（其实，这里已经埋下了隐患）
+>第一：选错人；我进入公司时候，原先主力iOS没干了（其实之前也是外包，做完就撤），剩下的是CEO招进来的，招了几个看上去还不错的iOS程序员。由于CEO也不是技术出身，所以说招进来的靠不靠谱也不是很清楚。按照以往我的习惯，我要了解一个人，我就网络搜索，爬虫等。还是挖到了一些有用的信息，iOS开发竟是培训机构出来的。之前谎称是有2年工作经验的。这块我找CEO聊了聊，但是人不好找，新产品开发时间紧，迫于无赖。暂时先留着，开发新产品。（其实，这里已经埋下了隐患）
 
-第二：没有产品经理。其实这也不是大问题，CEO往往前期可以充当产品经理。无奈，CEO之前是搞投资的，对产品经验欠缺。刚开始，我们是3个合伙人。CEO，我，还有一个负责运营的。新产品需求我们开始一起商量定的。说实话，到现在我还觉得，产品完全是我们闭着脑袋想出来的，产品设计不是很合理，没有充分的考虑市场，用户，这才导致产品上线用户黏性很低。
+>第二：没有产品经理。其实这也不是大问题，CEO往往前期可以充当产品经理。无奈，CEO之前是搞投资的，对产品经验欠缺。刚开始，我们是3个合伙人。CEO，我，还有一个负责运营的。新产品需求我们开始一起商量定的。说实话，到现在我还觉得，产品完全是我们闭着脑袋想出来的，产品设计不是很合理，没有充分的考虑市场，用户，这才导致产品上线用户黏性很低。
 
-第三：管理不行。大将无能，累死三军！这句话说的真好。往往下面出问题了，首先需要反思的是自己。所以说当你选错人后，如何管理，如何带人，这也是一种考验。一句话，没管理好。iOS开发进度一直落后，产品效果也不好。但我们就是不敢开除，因为不好找人啊！（我相信创业公司都如此）中间，其实建立了很多方式，绩效考核，绩效奖金等。现在，如果让我选择的话，我立刻开除。产品最终出来花的时间有点长，导致我们资金花了很大一部分。这就导致融资的急迫性。最终运营一段时间，因为资金链断了，团队解散了。
-
+>第三：管理不行。大将无能，累死三军！这句话说的真好。往往下面出问题了，首先需要反思的是自己。所以说当你选错人后，如何管理，如何带人，这也是一种考验。一句话，没管理好。iOS开发进度一直落后，产品效果也不好。但我们就是不敢开除，因为不好找人啊！（我相信创业公司都如此）中间，其实建立了很多方式，绩效考核，绩效奖金等。现在，如果让我选择的话，我立刻开除。产品最终出来花的时间有点长，导致我们资金花了很大一部分。这就导致融资的急迫性。最终运营一段时间，因为资金链断了，团队解散了。
 
 心里有很多关于自己创业的话说，可能是因为表达不行，可能是有些东西不知道从哪去讲。反正现在回忆起来，总觉得当时能做的太多了，但就是没做；总觉得当时不该犯的错误，就犯了；总觉得当时能考虑全很多事情，但就是没有；总觉得当时应该清醒一点，不要盲目闭门想着产品，但还是盲目了；总觉得产品做出来后，就很火了，但终究没有；总觉得......
-
-
 自己想到哪，写到哪。总感觉肚子里好多东西要写，但终究写不出来。想对那些一直在创业路上的朋友们，说两个字: 加油！
 
-------
 如果觉得有点帮助，可以赏点酒钱！（lizhi@lydiabox.com）
 ![](/images/aex068188cqwy9xbxa3oc07.png)
