--- a/source/_posts/单例模式使用和实现之优化笔记.md
+++ b/source/_posts/单例模式使用和实现之优化笔记.md
@@ -7,6 +7,8 @@ date: 2016-01-23 18:23:00
 ---
 这算是最为普遍的模式之一。在Java语言中，这样的行为能带来两大好处:  (1)对于频繁使用的对象，可以省略创建对象所花费的时间，这对于那些重量级对象而言，是非常可观的一笔系统开销。  (2)由于new操作的次数减少，因而对系统内存的使用频率也会降低，这将减轻GC压力，缩短GC停顿时间。
 
+<!-- more -->
+
 单例模式的核心在于通过一个接口返回唯一的对象实例。一个简单的单例实现如下：
 
 
@@ -14,14 +16,14 @@ date: 2016-01-23 18:23:00
        private Singleton(){
          System.out.println("Singleton is create");
        }
-       
+
        private static Singleton instance = new Singleton();
-       
+
        public static Singleton getInstance(){
 		  return instance;
        }
     }
-    
+
 很简单，十分可靠。它唯一的不足仅是无法对instance实例做延迟加载。列如单例的创建过程很慢。
 
 为了解决这个问题，引入延迟加载机制。
@@ -30,7 +32,7 @@ date: 2016-01-23 18:23:00
     	private LazySingleton(){
             System.out.println("LazySingleton is create");
         }
-        
+
         private static LazySingleton instance = null;
         public static synchronized LazySingleton getInstance(){
            if(instance == null){
@@ -39,17 +41,17 @@ date: 2016-01-23 18:23:00
            return instance;
         }
     }
-  
+
 使用上面的实现，虽然实现了延迟加载的功能，但和第一种方法相比，它引入了同步关键字，因此在多线程环境下，它的时耗要远远大于第一种单例模式。
 
 
 为了解决这个问题，还需要对其进行改进:
-	
+
     public class StaticSingleton {
        private StaticSingleton(){
          System.out.println("StaticSingleton is create");
        }
-		
+
        private static class SingletonHolder {
          private static StaticSingleton instance = new StaticSingleton();
        }
