--- a/source/_posts/大浏览量系统的解决思路.md
+++ b/source/_posts/大浏览量系统的解决思路.md
@@ -7,6 +7,8 @@ date: 2016-03-02 23:07:00
 ---
 随着网站的发展壮大，系统也面临越来越多的挑战，有些是业务发展带来的挑战，例如大型促销活动，秒杀活动等突发流量冲击；还有一些是非正常的访问请求，例如网站经常受到攻击和恶意请求。像这种流量突然暴增的情况对系统的冲击很大，有时候流量突然暴增的情况对系统的冲击很大，有时候流量瞬间可达到20w/s的QPS,所以如何让系统有更好的性能和稳定性是我们面临的一大挑战。
 
+<!-- more -->
+
 在介绍前台系统的静态化改造之前，先说说可以做哪些优化工作。介绍下淘宝前台系统的优化历程。
 
 2009年，系统拆分，静态文件合并，前端页面异步化和JSON化。
@@ -42,11 +44,3 @@ date: 2016-03-02 23:07:00
     异地化地域因素。
     去掉Cookie。
    	动态内容结构化。（ESI和CSI）
-    
-  
-    
-   
-
-
-
-
