--- a/source/_posts/如何不死掉.md
+++ b/source/_posts/如何不死掉.md
@@ -7,13 +7,13 @@ date: 2016-02-28 19:18:00
 ---
 今天失恋了，好难受。我发现这段时间经历的事情特别多，接连经历创业失败，撞车，失恋，彷佛生活差到了极点。
 
-
 每每遇到这样的事情，我都会消沉一天，然后重新振作，没什么大不了的。此时此刻，想起了我之前分享的一篇文章。
- 
+
+ <!-- more -->
 
 <b>如何不死掉——How Not to Die
- 
- 
+
+
 创业公司能活下去，靠的是不抛弃不放弃的士气。
 
 创业是个艰辛的过程，成功的创业者变得富有，失败的创业者一无所有（除了经验教训）。Paul Graham提到如果一个创业公司与Y Combinator失去联系，或者创业者不再出现在每周的聚会上，基本说明这个创业公司要挂掉了。（在国内，或许是下面的情景预示着公司即将挂掉：创业公司淡出人们的实现，创业者不再露面吧）。死掉的创业公司都是默默就挂掉了，悄无声息的就死了。
@@ -33,6 +33,3 @@ date: 2016-02-28 19:18:00
 生活也是这样，但要明白不放弃就对了。
 
 心累，晚安
-
-
-
