--- a/source/_posts/实现依赖注入功能.md
+++ b/source/_posts/实现依赖注入功能.md
@@ -7,11 +7,13 @@ date: 2016-01-22 20:52:00
 ---
 对类的实例化，不是开发者自己通过new的方式来实例化，而是通过框架自身来实例化，这过程称为IoC。控制不是由开发者来决定的，而是反转给框架了。一般地，我们也将控制反转称为DI（Dependency Injection，依赖注入）。那如何实现呢？
 
+<!-- more -->
+
 最简单的方式是，先通过BeanHelper获取所有Bean Map（是一个Map<Class<?>,Object> 结构，纪录了类与对象的映射关系，
 分别取出Bean类与Bean实例 ，进而通过反射获取类中所有的成员变量。继续遍历这些成员变量，在循环中判断当前成员变量是否带有Inject注解，若带有该注解，则从Bean Map中根据Bean类取出Bean实例。最后通过ReflectionUtil＃setField方法来修改当前成员变量的值。
 
 核心实现：
-	
+
         Map<Class<?>, Object> beanMap = BeanHelper.getBeanMap();
         if (CollectionUtil.isNotEmpty(beanMap)) {
             for (Map.Entry<Class<?>, Object> beanEntry : beanMap.entrySet()) {
@@ -31,8 +33,8 @@ date: 2016-01-22 20:52:00
                 }
             }
         }
-        
-        
+
+
 -------
 更多架构底层实现代码请移步
 
