--- a/source/_posts/情人节礼物.md
+++ b/source/_posts/情人节礼物.md
@@ -15,3 +15,5 @@ We are both programmers, so I write some code to celebrate our 1st valentine's d
 
 代码：
 https://github.com/edagarli/OurLoveStory/
+
+<!-- more -->
