--- a/source/_posts/设计优化之笔记.md
+++ b/source/_posts/设计优化之笔记.md
@@ -6,7 +6,9 @@ categories:
 date: 2016-01-23 17:06:00
 ---
 软件的结构对系统整体性能有着重要的影响。优秀的设计结构可以规避很多潜在的性能问题，对系统性能的影响可能远远大于代码的优化。因此，熟悉一些常用的软件设计模式和方法，对设计高性能软件有着重要的帮助。一些常用的与性能相关的设计模式，组件和设计方法如下:
-    
+
+<!-- more -->
+  
      单列模式的使用和实现
         代理模式的实现和深入
         享元模式的应用
