--- a/source/_posts/关于淘点点面试中碰到的架构问题​.md
+++ b/source/_posts/关于淘点点面试中碰到的架构问题​.md
@@ -9,6 +9,8 @@ date: 2016-01-28 10:54:00
 ---
 之前面试淘点点的时候被问倒得一个问题至今牵挂，由于工作环境的限制，我没能接触到一些大数据量的并发工作，也没能有机遇参与复杂系统的设计，而我学习复杂或高并发系统的唯一途径就是阅读源码，惭愧的是，至今也只阅读了Tomcat的部分源码
 
+<!-- more -->
+
 从事开发工作两年来，从未写过只言片语，俗话说的好”好记性不如烂笔头“，最近心血来潮开始想慢慢写点博文，不仅是知识的积累还是为了若干年后回头看看当年努力的过程，希望把这个养成习惯并坚持下去，啰嗦了这么久 来点干货把。
 
 之前面试淘点点的时候被问倒得一个问题至今牵挂，由于工作环境的限制，我没能接触到一些大数据量的并发工作，也没能有机遇参与复杂系统的设计，而我学习复杂或高并发系统的唯一途径就是阅读源码，惭愧的是，至今也只阅读了Tomcat的部分源码，于是我在oschina上贴出问题与互联网猿一同分析（大家可以先看看问题：关于淘点点面试中碰到的架构问题），非常感谢大家的意见，尤其是@林中漫步 @JerryLin 两位先生 最终确定两钟实现思路：
@@ -17,7 +19,7 @@ date: 2016-01-28 10:54:00
 
 2、Redis+定时器
 
- 
+
 
 思路 1
 
@@ -27,7 +29,7 @@ date: 2016-01-28 10:54:00
 
 代码实现：待实现后补充
 
- 
+
 
 思路 2
 
