--- a/source/_posts/发布或重启线上服务时抖动问题解决方案.md
+++ b/source/_posts/发布或重启线上服务时抖动问题解决方案.md
@@ -7,6 +7,7 @@ date: 2016-03-01 10:45:00
 ---
 最近发现项目重启时，load会飙到非常高，然后运行了一段时间，会恢复正常，所以集中整理了下资料以便查阅。
 
+<!-- more -->
 
 http://www.cnblogs.com/LBSer/p/3703967.html
 https://confluence.atlassian.com/jirakb/jira-crashes-due-to-codecache-is-full-compiler-has-been-disabled-314447083.html
