--- a/source/_posts/谈谈赚钱的事与值钱的事.md
+++ b/source/_posts/谈谈赚钱的事与值钱的事.md
@@ -6,54 +6,55 @@ categories:
 date: 2016-01-17 17:53:00
 ---
 赚钱的事与值钱的事，往往是两件事。创业的痛苦很大在于此。
- 
+
+<!-- more -->
         《穷爸爸富爸爸》里，有个故事。
         一个村庄没有水，村长就委托两个年轻人，給这个村庄供水，村民向他们支付费用。
        第一个年轻人艾德，马上买了两只大桶，每日奔波于10里以外的湖泊和村庄之间。艾德立即就赚到了钱。
        另一个人叫比尔，自从签订合同后，他就消失了。
- 
+
        半年后，比尔带着一个施工队和一笔投资回到了村庄。过去的半年时间里，他做了商业计划，找到了投资，注册了公司，并雇用了项目施工管理的专业人员。之后，又花了一年多的时间，比尔修建了一套从湖泊通往村庄的供水管道系统。
- 
+
        清水从水龙头中涌出的那个瞬间，艾德的生意被摧毁了。他赚了一年半的钱。
- 
+
        这个故事还是挺形象地说了，赚钱的事与值钱的事的不同。
- 
+
        赚钱的事的核心，是当下的利差。现金现货，将本求利。
        但是，你赚钱的时候，别人在设计一个更大的结构覆盖你，当比尔的水管接通，艾德愤怒妒恨哭天抢地找村长都是没用的。一个时代结束了，就是结束了。
        所谓互联网+ 对传统企业的进攻，大致如此。
- 
+
        而值钱的事的核心，是结构性价值，它的兑现时间在某个未来。如同，比尔的供水系统，在拧开水龙头，清水流出之前，他所面对的，是日复一日的现金消耗，以及所有人对他的无尽质疑——我们到底能不能完成这件事，接通水，赚到钱？
- 
+
        从投资人角度看比尔的水管，要基于对市场需求与供給能力、成本结构、市场变化概率的评估后，进行估值、投资，然后建设、收益分成。
- 
+
        比如市场需求有多大。没有水管之前，艾德每天从湖中打水运到村里，村里的人不一直是这样过的吗？
        但是，有了水管，不但可以规避因为艾德某天身体不好，某天家里有事导致的供应能力不稳定外，人们可以7*24小时用水，还可以洗澡、清洗房屋，用水的需求大大扩大了。人们有各种使用水的想像力，只是之前，供应能力被限制而已。站在变化看市场需求，及投入的成本是否值得。
- 
+
        接着，村中，是否有未发现的水源，可以打出井水。然后建同样的管道和比尔竞争？
        那么，策略应该是在地下水没被发现之前，先击垮竞争对手艾德。接着，如果有人发现地下水，就应该果断兼并。垄断供应能力。
        所以，前段创业歌谣“C轮死、D轮合 ”描述的美团点评、滴滴快滴的故事，其实都是湖水兼并井水的供应能力的整合。以免由于市场容量大致确定，同质化竞争而降低利润。
- 
+
        还有什么风险呢？地下水脉突然动了，湖干了井枯了，这属于天灾，算倒霉。
- 
+
        但，如果，水管开通之日，突然收到通知，说这个村庄的位置，属于三峡淹没区。一年后，整个村庄将被淹没进入水库之底。所有村民都要在一年内搬迁走。
- 
+
        这就是，比尔设计的结构，败給了一个更大的结构。
        那就，所有人都白干了。
        如同O2O大战中，那些做了个APP，然后围着某个楼盘小区殷勤服务了一年之后灰飞烟灭的小O2O商家。未来，在这个领域，我们将看到无数结构的挤压和整合，直到成为一个坚固有效率的大结构。如同美团之于千团大战。
- 
+
        这也大致解释了，为什么京东不赚钱，但是它值钱。
        京东在这个过程中，建设了一个巨大的结构——以京东物流能力为代表的整个京东的运营系统。京东值钱的，是这个结构。如同比尔，拥有的是那个沟通湖泊与村庄的供水系统：湖泊并不是比尔的。
        京东一直亏钱，但是，它的结构一直在扩张，不断覆盖更大的空间，并且它的系统效率未被其他电商超越。这就是一个不赚钱的公司的值钱所在。
- 
+
        能够看清一个更大的时空里，产业结构模式，乃至社会结构模式的变化，就是战略能力。
        所以，2003年，30出头的丁磊成为中国首富。为什么？因为，中国有14亿人口，10年之内，一定会产生5亿以上网民。这样一个即将爆发的巨量市场，2003年的中国，还没什么像样的互联网公司，那时的丁磊，如同十六世纪登录南美洲的西班牙人，那群人，在西班牙，也许不算太厉害，但是在广袤的南美，他们就是没有对手。
- 
+
        再讲一个关于赚钱和值钱的真实故事。好久以前的UC浏览器的故事。
        2004年几个搞技术的兄弟，在功能机时代开发出UC浏览器，可以手机浏览网页。他们几个通过給移动公司，开发定制版本，也赚了一些钱。
        当时还在联想投资的俞永福发现了这个项目，他告诉几个兄弟，这个项目有价值，但是你们的做法不对。俞永福在和雷军沟通这个项目的时候，雷军的建议是，既然你对这件事的战略想的这么清楚，你就应该加入，亲自把这个战略实现。和兄弟几个谈，你加入，你当CEO，他们几个管技术产品，你负责战略、融资、市场和BD。
        2006年12月，俞永福和雷军的投资一起进入了UC浏览器。现在看，那是多么凶险的时刻。就在1个月后的2007年1月10日，乔布斯发布了IPHONE，宣告了智能手机时代的来临。功能机及基于功能机的软件，那一刻集体被判了死刑。灭顶的洪水已经启动，正在流向比尔的村庄。
        但是俞永福利用他熟悉资本和宏观战略格局的优势，快速融资，搭建精英BD团队，与手机厂商合作与移动公司合作，在智能机还没有普及的最后3年窗口期，把UC浏览器的装机量扩大了100倍。把UC浏览器从一套套订制赚钱的软件系统，变成了一个移动互联网的流量平台。功能机灭顶前，UC，上了方舟。
- 
+
        说到雷军，我最感激他的，还真不是2008年他投资我，当时年轻不懂事，拿人家钱拿得理直气壮。
        投资我一年之后，雷军问：公司还有钱吗？
        我说了个数字。他很吃惊，问，为什么还剩这么多钱？
@@ -63,15 +64,15 @@ date: 2016-01-17 17:53:00
        “梁宁，以你的才华，如果你想做广告，你大可以加入任何一个大广告公司，去做一个最优秀的广告人。但是，你现在创业，要做的一个互联网产品。作为创业企业，最核心的资源，就是CEO的精力。你就应该全力以赴，把100%的时间和精力都用上去，把这个互联网产品做好。
        我建议你不要再分精力去赚这些小钱。剩下多少钱，花完为止，看你能不能把你构想的做出来。作为投资人，我愿意承担资金的损失，也不想看到你抱着一个小广告公司，耽误时间。”
        这是我受益最大的一次谈话。极其感谢雷军。非常感谢。
- 
+
        做赚钱的事，还是做值钱的事，都有窗口期，时代总是在变。
        赚钱的事，难在收手。好似股票要抛出，才能论输赢。
        而做值钱的事，难在，看清存在于未来时空运作的新产业结构，然后全力以赴，以最快的速度把它搭建出来。定战略、配资源，说服、说服、坚持、坚持、整合、整合，死扛到结构开始运作并全量覆盖的那一天。所以，做值钱的事，更难。
- 
+
        创业者最难的，是苦苦坚持时的心理负担：放弃赚钱的机会，初衷不改，想搭个大系统成为大企业家，结果中途败了，成了骗子。
        唉，创业维艰。
- 
- 
+
+
 PS:
 上周和千里猫猫哥、子牛、青海的孔司长涮羊肉。说到了赚钱的事，和值钱的事的区别。写篇小文总结一下。
 《小门神》电影没赚钱，一时间互联网江湖，对追光与王微嘘声四起。这个时代当然是个认钱的时代，没赚到钱的人，就要遭此白眼。
