--- a/source/_posts/调用超时监控组件开源.md
+++ b/source/_posts/调用超时监控组件开源.md
@@ -42,6 +42,11 @@ categories:
 
 https://github.com/edagarli/monitor-example/
 
+
+## contact me ##
+
+Weibo: [@edagarli](http://weibo.com/edagarli)
+
 ## 开源协议
 
 [MIT](https://github.com/2-dfire/twodfire-monitor/blob/master/LICENSE)
