--- a/source/_posts/谈谈工作狂.md
+++ b/source/_posts/谈谈工作狂.md
@@ -2,6 +2,8 @@ title: 谈谈工作狂
 
 ---
 
+最近在看重来这本书，觉得工作狂这块写的不错，整理了下，分享出来。
+
 沉迷工作是企业文化中广受赞颂的一种“优良做派”。我们知道工作狂热衷于通宵达旦、加班加点，甚至在办公室打地铺。这些人以累死在项目中为荣，对他们来说，再大的工作量也不在话下。工作狂的行为不但没有必要，而且愚蠢至极。过多的工作并不代表你对项目更关注，也不代表你作了更多贡献，这仅仅意味着你干了更多活而已。
 
 <!-- more -->
@@ -11,6 +13,7 @@ title: 谈谈工作狂
 但这仅仅代表他们浪费了大量时间去关注次要的细节，而不是推动下一项任务。工作狂不是英雄。他们没有力挽狂澜，不过是浪费时间而已。真正的英雄早已想出办法、搞定一切，然后回家了。
   
 开始尝试在微信公众号写点文章了.
+
 
 我是李智(edagarli), 如果你觉得我分享的东西有所帮助,不妨长按关注下.
 
